@@ -5,12 +5,14 @@ import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doNothing;
+import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Stream;
@@ -18,37 +20,80 @@ import java.util.stream.Stream;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
+
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.MockitoAnnotations;
+
+import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
+
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
 
 import school.faang.user_service.dto.goal.GoalDto;
 import school.faang.user_service.dto.goal.GoalFilterDto;
 import school.faang.user_service.entity.User;
 import school.faang.user_service.entity.goal.Goal;
-import school.faang.user_service.mapper.goal.GoalMapper;
+import school.faang.user_service.mapper.GoalMapper;
+import school.faang.user_service.repository.SkillRepository;
 import school.faang.user_service.repository.goal.GoalRepository;
+import school.faang.user_service.service.goal.filters.TitleGoalFilter;
+import school.faang.user_service.validation.GoalValidator;
+
+import java.util.Collections;
+
+import static org.junit.jupiter.api.Assertions.*;
 
 @ExtendWith(MockitoExtension.class)
-class GoalServiceTest {
+@MockitoSettings(strictness = Strictness.LENIENT)
+public class GoalServiceTest {
     @InjectMocks
     private GoalService goalService;
+
     @Mock
     private GoalRepository goalRepository;
-    private GoalFilter filter1;
-    private GoalFilter filter2;
-    @Mock
+
+    @Spy
     private GoalMapper goalMapper;
 
+    private List<GoalFilter> goalFilters;
+
+    @Mock
+    private GoalValidator goalValidator;
+    private List<Goal> mockSubtasks;
+    private List<GoalDto> mockDtoList;
+    private GoalFilter filter1;
+    private GoalFilter filter2;
+
     @BeforeEach
-    void setUp() {
+    public void setUp() {
+        mockSubtasks = new ArrayList<>();
+        Goal subtask1 = new Goal();
+        subtask1.setId(1L);
+        subtask1.setTitle("Subtask 1");
+        Goal subtask2 = new Goal();
+        subtask2.setId(2L);
+        subtask2.setTitle("Subtask 2");
+        mockSubtasks.add(subtask1);
+        mockSubtasks.add(subtask2);
+
+        mockDtoList = new ArrayList<>();
+        GoalDto dto1 = new GoalDto();
+        dto1.setId(1L);
+        dto1.setTitle("Subtask 1");
+        GoalDto dto2 = new GoalDto();
+        dto2.setId(2L);
+        dto2.setTitle("Subtask 2");
+        mockDtoList.add(dto1);
+        mockDtoList.add(dto2);
+
         filter1 = mock(GoalFilter.class);
         filter2 = mock(GoalFilter.class);
-        MockitoAnnotations.initMocks(this);
-        goalService = new GoalService(goalRepository, goalMapper, new ArrayList<>());
+        goalService = new GoalService(goalRepository, goalMapper, goalFilters,goalValidator);
+        MockitoAnnotations.openMocks(this);
     }
 
     @Test
@@ -64,29 +109,40 @@ class GoalServiceTest {
     }
 
     @Test
-    void testGetGoalsByUserWithoutFilters() {
-        goalService.getGoalsByUser(1L);
-
-        verify(goalRepository, times(1)).findGoalsByUserId(1L);
-    }
-
-    @Test
     void testGetGoalsByUser_WithNonApplicableGoalFilter() {
         Long userId = 1L;
         GoalFilterDto filters = new GoalFilterDto();
-
         GoalFilter nonApplicableFilter = mock(GoalFilter.class);
         when(nonApplicableFilter.isApplicable(filters)).thenReturn(false);
 
         List<GoalFilter> goalFilters = List.of(nonApplicableFilter);
-        goalService = new GoalService(goalRepository, goalMapper, goalFilters);
-
         List<Goal> goals = List.of(new Goal(), new Goal());
         when(goalRepository.findAll()).thenReturn(goals);
-
         List<GoalDto> result = goalService.getGoalsByUser(userId, filters);
 
         assertEquals(0, result.size());
+    }
+
+    @Test
+    public void testCreateGoal() {
+        Long userId = 1L;
+        GoalDto mockGoalDto = new GoalDto();
+
+        Goal mockGoal = mock(Goal.class);
+
+        when(mockGoal.getId()).thenReturn(1L);
+        when(mockGoal.getParent()).thenReturn(mock(Goal.class));
+        when(mockGoal.getParent().getId()).thenReturn(2L);
+
+        when(goalMapper.toEntity(any(GoalDto.class))).thenReturn(mockGoal);
+        doNothing().when(goalValidator).validateGoal(anyLong(), any(GoalDto.class));
+        when(goalRepository.save(any(Goal.class))).thenReturn(mockGoal);
+        when(goalMapper.toDto(any(Goal.class))).thenReturn(mockGoalDto);
+
+        GoalDto result = goalService.createGoal(userId, mockGoalDto);
+
+        assertNotNull(result);
+        assertEquals(mockGoalDto, result);
     }
 
     @Test
@@ -97,10 +153,10 @@ class GoalServiceTest {
         GoalFilter applicableFilter = mock(GoalFilter.class);
         when(applicableFilter.isApplicable(filters)).thenReturn(true);
 
-        List<GoalFilter> goalFilters = List.of(applicableFilter);
-        goalService = new GoalService(goalRepository, goalMapper, goalFilters);
+        List<GoalFilter> goalFilters = Collections.singletonList(applicableFilter);
+        goalService = new GoalService(goalRepository, goalMapper, goalFilters, goalValidator);
 
-        List<Goal> goals = List.of(new Goal(), new Goal());
+        List<Goal> goals = Arrays.asList(new Goal(), new Goal());
         when(goalRepository.findAll()).thenReturn(goals);
 
         GoalDto goalDto1 = new GoalDto();
@@ -116,110 +172,5 @@ class GoalServiceTest {
         assertEquals(goalDto1, result.get(0));
         assertEquals(goalDto2, result.get(1));
         verify(goalMapper, times(2)).toDto(any(Goal.class));
-    }
-
-    @Test
-    public void testDeleteGoal_ExistingGoal() {
-        long goalId = 1L;
-
-        goalService.deleteGoal(goalId);
-
-        verify(goalRepository, times(1)).deleteById(goalId);
-    }
-
-    @Test
-    public void testDeleteGoal_NonExistentGoal() {
-        long nonExistentGoalId = 10L;
-
-        doNothing().when(goalRepository).deleteById(anyLong());
-
-        goalService.deleteGoal(nonExistentGoalId);
-
-        verify(goalRepository, times(1)).deleteById(nonExistentGoalId);
-    }
-
-    @Test
-    public void testGetAllGoalsByUser() {
-        goalService.getGoalsByUser(1L);
-
-        verify(goalRepository, times(1)).findGoalsByUserId(1L);
-    }
-
-    @Test
-    @DisplayName("Should return goal by id")
-    public void testGetById() {
-        Goal running = new Goal();
-        running.setId(1L);
-        running.setTitle("Running");
-        running.setDescription("Running description");
-
-        when(goalRepository.findById(1L)).thenReturn(Optional.of(running));
-        goalService.get(1L);
-        Mockito.verify(goalMapper, Mockito.times(1)).toDto(running);
-    }
-
-    @Test
-    @DisplayName("Should update goal successfully")
-    public void testUpdateGoal() {
-        Goal running = new Goal();
-        running.setId(1L);
-        running.setTitle("Running");
-        running.setDescription("Running description");
-
-        when(goalRepository.findById(1L)).thenReturn(Optional.of(running));
-
-        GoalDto goalToUpdate = new GoalDto();
-        goalToUpdate.setId(1L);
-        goalToUpdate.setTitle("Update goal");
-        goalToUpdate.setDescription("Update goal");
-
-        goalService.update(goalToUpdate);
-        Mockito.verify(goalMapper, Mockito.times(1)).update(goalMapper.toDto(running), goalToUpdate);
-        Mockito.verify(goalRepository, Mockito.times(1)).save(goalMapper.toEntity(goalMapper.toDto(running)));
-    }
-
-    @Test
-    @DisplayName("Should remove specific user from goal.users list, if users > 2")
-    public void removeUserFromGoalsTest() {
-        Goal running = new Goal();
-        Goal swimming = new Goal();
-        Goal coding = new Goal();
-        Goal relaxing = new Goal();
-
-        User alex = new User();
-        alex.setId(1L);
-
-        User blake = new User();
-        blake.setId(2L);
-
-        running.setId(1L);
-        running.setUsers(List.of(alex, blake));
-
-        swimming.setId(2L);
-        swimming.setUsers(List.of(alex, blake));
-
-        coding.setId(3L);
-        coding.setUsers(List.of(alex, blake));
-
-        relaxing.setId(4L);
-        relaxing.setUsers(List.of(alex, blake));
-
-        when(goalRepository.findAllById(List.of(1L, 2L, 3L, 4L))).thenReturn(List.of(running, swimming,coding, relaxing));
-
-        int removedUsersFromGoalCount = goalService.removeUserFromGoals(List.of(1L, 2L, 3L, 4L), 1L);
-
-        assertEquals(4, removedUsersFromGoalCount);
-        assertEquals(1, running.getUsers().size());
-        assertEquals(1, swimming.getUsers().size());
-        assertEquals(1, coding.getUsers().size());
-        assertEquals(1, relaxing.getUsers().size());
-    }
-
-    @Test
-    @DisplayName("Should call goalRepository.deleteAllById")
-    void testDeleteAllByIds() {
-        goalService.deleteAllByIds(List.of(1L, 2L, 3L, 4L));
-
-        verify(goalRepository, times(1)).deleteAllById(List.of(1L, 2L, 3L, 4L));
     }
 }
